<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- intro2 strings -->

  <string name="app_name">Intro2</string>
  <string name="ek_img_content">ExportKit Image</string>
  <string name="this_is_another_sample_fomt_and_atexccljgtdkl_string">This is another sample fomt and atexccljgtdkl</string>
  <string name="onboarding_string">ONBOARDING</string>
  <string name="skip_string">SKIP</string>
  <string name="next_string">NEXT</string>
  <string name="lorem_dolor_sit_amet_consectetur_adipisicing_elit__sed_do_eiusmod_tempor_incididunt_ut_ero_labore_et_dolore_string">Lorem dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore</string>
  <string name="onboarding_ek1_string">ONBOARDING</string>
  <string name="next_ek1_string">NEXT</string>
  <string name="skip_ek1_string">SKIP</string>
  <string name="next_ek2_string">NEXT</string>
  <string name="welcome_to_agora_android__this_is_just_a_short_tour_to_familiarize_you_with_the_functionality_of_the_module_string">Welcome to Agora Android!\
This is just a short tour to familiarize you with the functionality of the module</string>
  <string name="skip_ek2_string">SKIP</string>
  <string name="onboarding_ek2_string">ONBOARDING</string>
  <string name="authentication_string">Authentication</string>
  <string name="lorem_dolor_sit_amet_consectetur_adipisicing_elit__sed_do__string">Lorem dolor sit amet consectetur adipisicing elit, sed do.</string>
  <string name="john_doe_string">John Doe</string>
  <string name="full_name_string">Full Name</string>
  <string name="username_domain_com_string">username@domain.com</string>
  <string name="email_string">Email</string>
  <string name="_________string"></string>
  <string name="password_string">Password</string>
  <string name="_________ek1_string"></string>
  <string name="confirmpassword_string">ConfirmPassword</string>
  <string name="john_doe_ek1_string">John Doe</string>
  <string name="security_question_string">Security Question</string>
  <string name="john_doe_ek2_string">John Doe</string>
  <string name="security_answer_string">Security Answer</string>
  <string name="sign_up_string">SIGN UP</string>
  <string name="login_string">LOGIN</string>
  <string name="register_string">REGISTER</string>
  <string name="authentication_ek1_string">Authentication</string>
  <string name="lorem_dolor_sit_amet_consectetur_adipisicing_elit__sed_do__ek1_string">Lorem dolor sit amet consectetur adipisicing elit, sed do.</string>
  <string name="continue_string">CONTINUE</string>
  <string name="go_ahead_as_a_guest_string">GO AHEAD AS A GUEST</string>
  <string name="john_doe_ek3_string">John Doe</string>
  <string name="full_name_ek1_string">Full Name</string>
  <string name="johndoe_mail_com_string">johndoe@mail.com</string>
  <string name="email_ek1_string">Email</string>
  <string name="forgot_password__string">Forgot Password?</string>
  <string name="continue_ek1_string">CONTINUE</string>
  <string name="_________ek2_string"></string>
  <string name="password_ek1_string">Password</string>
  <string name="login_ek5_string">LOGIN</string>
  <string name="sign_up_ek1_string">SIGN UP</string>
  <string name="enter_registered_e_mail_string">Enter Registered e-mail</string>
  <string name="send_mail_string">SEND MAIL</string>
  <string name="haven_t_received_mail_yet__resend_activationlink_string">Havent received mail yet? Resend ActivationLink</string>
  <string name="forgot_password_ek3_string">Forgot Password</string>
  <string name="johndoe_mail_com_ek1_string">johndoe@mail.com</string>
  <string name="email_ek2_string">Email</string>
  <string name="create_election_string">Create Election</string>
  <string name="add_candidates_string">Add Candidates</string>
  <string name="johndoe_string">johndoe</string>
  <string name="candidate_s_name_string">Candidates Name</string>
  <string name="add_string">ADD</string>
  <string name="john_doe_ek4_string">John Doe</string>
  <string name="full_name_ek2_string">Full Name</string>
  <string name="john_doe_ek5_string">John Doe</string>
  <string name="election_description_string">Election Description</string>
  <string name="_12_12_2012_string">12-12-2012</string>
  <string name="start_date_string">Start Date</string>
  <string name="_12_12_2012_ek1_string">12-12-2012</string>
  <string name="end_date_string">End Date</string>
  <string name="election_info_string">Election Info</string>
  <string name="johndoe_ek1_string">johndoe</string>
  <string name="johndoe_mail_com_ek2_string">johndoe@mail.com</string>
  <string name="johndoe_mail_com_ek3_string">johndoe@mail.com</string>
  <string name="johndoe_mail_com_ek4_string">johndoe@mail.com</string>
  <string name="johndoe_mail_com_ek5_string">johndoe@mail.com</string>
  <string name="add_candidates_ek1_string">Add Candidates</string>
  <string name="johndoe_ek2_string">johndoe</string>
  <string name="candidate_s_name_ek1_string">Candidates Name</string>
  <string name="add_ek1_string">ADD</string>
  <string name="voting_algorithm_string">Voting Algorithm</string>
  <string name="oklahoma__string">Oklahoma </string>
  <string name="two_factor_auth_string">Two Factor Auth</string>
  <string name="_353453_string">353453</string>
  <string name="enter_otp_string">Enter OTP</string>
  <string name="a_one_time_security_key_has_been_mailed_to_you_string">A One Time Security Key has been mailed to you</string>
  <string name="_____text___h2___selected___on_surface___high_emphasis___left_ek1_string">No Internet Connection!</string>
  <string name="activate_your_account_string">Activate Your Account</string>
  <string name="open_email_app_string">OPEN EMAIL APP</string>
  <string name="haven_t_received_mail_yet__resend_activationlink_ek1_string">Havent received mail yet? Resend ActivationLink</string>
  <string name="_____text___h4___selected___on_surface___high_emphasis___left_ek1_string">To confirm your mail address a verification link \
has been sent to the same</string>
  <string name="mail_sent__string">Mail Sent!</string>
  <string name="pending_elections__string">Pending Elections:</string>
  <string name="all_elections__string">All Elections:</string>
  <string name="active_elections__string">Active Elections:</string>
  <string name="finished_elections__string">Finished Elections:</string>
  <string name="_33_string">33</string>
  <string name="_11_string">11</string>
  <string name="_34_string">34</string>
  <string name="_78_string">78</string>
  <string name="dashboard_ek3_string">Dashboard</string>
  <string name="create_election_ek1_string">CREATE ELECTION</string>
  <string name="invite_voters_string">Invite Voters</string>
  <string name="johndoe_mail_com_ek6_string">johndoe@mail.com</string>
  <string name="add_ek2_string">ADD</string>
  <string name="johndoe_mail_com_ek7_string">johndoe@mail.com</string>
  <string name="johndoe_mail_com_ek8_string">johndoe@mail.com</string>
  <string name="johndoe_mail_com_ek9_string">johndoe@mail.com</string>
  <string name="_____text___h4___selected___on_surface___high_emphasis___left_ek3_string">Enter e-mail address of the voter to invite</string>
  <string name="_____text___h4___selected___on_surface___high_emphasis___left_ek5_string">Voters to be invited</string>
  <string name="invite__string">INVITE </string>
  <string name="election_created_string">Election Created</string>
  <string name="__congrats___the_election_has_been_created_string"> Congrats! \
The Election Has Been Created</string>
  <string name="go_to_dashboard_string">GO TO DASHBOARD</string>
  <string name="invite_voters_ek1_string">INVITE VOTERS</string>
  <string name="or_string">Or</string>
  <string name="voters_invited__string">Voters Invited!</string>
  <string name="congrats__the_mail_has_been__sent_to_the_voters_string">Congrats!\
The mail has been \
sent to the voters</string>
  <string name="go_to_dashboard_ek1_string">GO TO DASHBOARD</string>
  <string name="share_with_friends_string">Share With Friends</string>
  <string name="spread_the_word__share_agora_string">Spread the word!\
Share Agora</string>
  <string name="share_with_friends_ek1_string">SHARE WITH FRIENDS</string>
  <string name="share_with_others_string">Share With Others</string>
  <string name="contact_us_string">Contact Us</string>
  <string name="report_a_bug_string">Report A Bug</string>
  <string name="about_us_string">About Us</string>
  <string name="dashboard_ek4_string">Dashboard</string>
  <string name="__aureliensalomon_string">@aureliensalomon</string>
  <string name="aur_lien_salomon_string">Aurlien Salomon</string>
  <string name="welcome_string">Welcome</string>
  <string name="aurelien__string">Aurelien!</string>
  <string name="found_a_bug__string">Found A Bug?</string>
  <string name="found_a_bug__report_us_so_that_we_can_fix_it_as_soon_as_possible_string">Found a bug?\
Report us so that we can fix it\
as soon as possible</string>
  <string name="report_a_bug_ek1_string">REPORT A BUG</string>
  <string name="contact_us_ek1_string">Contact Us</string>
  <string name="join_the_discussions_in_the_chat_room_or__at_gitlab____string">Join the discussions in\
the chat room\
or \
at GitLab   </string>
  <string name="aossie_s_gitter_room_string">AOSSIES GITTER ROOM</string>
  <string name="aossie_s_gitlab_string">AOSSIES GITLAB</string>
  <string name="profile_string">Profile</string>
  <string name="john_doe_ek6_string">John Doe</string>
  <string name="full_name_ek3_string">Full Name</string>
  <string name="johndoe_mail_com_ek10_string">johndoe@mail.com</string>
  <string name="email_ek3_string">Email</string>
  <string name="_________ek3_string"></string>
  <string name="password_ek2_string">Password</string>
  <string name="edit_profile_string">EDIT PROFILE</string>
  <string name="elections_string">Elections</string>
  <string name="no_elections_created_string">No Elections Created</string>
  <string name="cast_vote_string">Cast Vote</string>
  <string name="cast_vote_ek1_string">Cast Vote</string>
  <string name="active_elections_ek3_string">Active Elections</string>
  <string name="title_activity_nav_home">NavHome</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>

  <string name="home_second">Home Second</string>
</resources>