<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		intro2
	 *	@date 		0
	 *	@title 		Intro2
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/forgot_password" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="812dp" >





			<RelativeLayout android:id="@+id/page_forgot_password_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__forgot_password_ek2"
					android:background="@drawable/_bg__forgot_password_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />

				<TextView android:id="@+id/enter_registered_e_mail"
					android:fontFamily="Baskerville Old Face"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/enter_registered_e_mail_color"
					android:layout_marginLeft="92dp"
					android:layout_marginTop="389dp"
					android:layout_width="189dp"
					android:layout_height="25dp"
					android:text="@string/enter_registered_e_mail_string"
					 />


				<RelativeLayout android:id="@+id/continue_ek2"
					android:layout_marginTop="574dp"
					android:layout_marginStart="31dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_119"
						android:background="@drawable/rectangle_119_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="314dp"
						android:layout_height="49dp" />

					<TextView android:id="@+id/send_mail"
						android:fontFamily="Arial"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="15sp"
						android:textColor="@color/authentication_color"
						android:layout_marginLeft="113dp"
						android:layout_marginTop="15dp"
						android:layout_width="87dp"
						android:layout_height="20dp"
						android:text="@string/send_mail_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/haven_t_received_mail_yet__resend_activationlink"
					android:fontFamily="Arial"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/this_is_another_sample_fomt_and_atexccljgtdkl_color"
					android:layout_marginLeft="22dp"
					android:layout_marginTop="670dp"
					android:layout_width="333dp"
					android:layout_height="20dp"
					android:text="@string/haven_t_received_mail_yet__resend_activationlink_string"
					 />

				<ImageView android:id="@+id/undraw_searching_p5ux_3x"
					android:src="@drawable/undraw_searching_p5ux_3x"
					android:contentDescription="undraw_searching_p5ux_3x"
					 android:layout_marginLeft="50dp"
					 android:layout_marginStart="50dp"
					android:layout_marginTop="118dp"
					android:layout_width="260dp"
					android:layout_height="188dp" />

				<TextView android:id="@+id/forgot_password_ek3"
					android:fontFamily="FontAwesome"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="25sp"
					android:shadowRadius="2"
					android:shadowColor="#704d4d"
					android:shadowDx="0"
					android:shadowDy="3"
					android:textColor="@color/forgot_password_ek3_color"
					android:layout_marginLeft="93dp"
					android:layout_marginTop="21dp"
					android:layout_width="187dp"
					android:layout_height="38dp"
					android:text="@string/forgot_password_ek3_string"
					 />

				<View android:id="@+id/rectangle_1468"
					android:background="@drawable/rectangle_1468_shape"
					 android:layout_marginLeft="-1dp"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="20dp"
					android:layout_width="375dp"
					android:layout_height="48dp" />


				<RelativeLayout android:id="@+id/backward_arrow_ek3"
					android:layout_marginTop="30dp"
					android:layout_marginStart="32dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/path_10_ek5"
						android:src="@drawable/path_10_ek5"
						android:contentDescription="path_10_ek5"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="16dp"
						android:layout_height="16dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_40"
					android:layout_marginTop="65dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/path_238_ek3"
						android:src="@drawable/path_238_ek3"
						android:contentDescription="path_238_ek3"
						 android:layout_marginLeft="-9dp"
						 android:layout_marginStart="-9dp"
						android:layout_marginTop="-6dp"
						android:layout_width="206dp"
						android:layout_height="22dp" />

					<ImageView android:id="@+id/path_239_ek3"
						android:src="@drawable/path_239_ek3"
						android:contentDescription="path_239_ek3"
						 android:layout_marginLeft="179dp"
						 android:layout_marginStart="179dp"
						android:layout_marginTop="-6dp"
						android:layout_width="206dp"
						android:layout_height="22dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/input_ek6"
					android:layout_marginTop="464dp"
					android:layout_marginStart="33dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_147_ek9"
						android:background="@drawable/rectangle_147_ek9_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="13dp"
						android:layout_width="309dp"
						android:layout_height="48dp" />

					<TextView android:id="@+id/johndoe_mail_com_ek1"
						android:fontFamily="Arial"
						android:textSize="14sp"
						android:textColor="@color/john_doe_color"
						android:layout_marginLeft="19dp"
						android:layout_marginTop="30dp"
						android:layout_width="126dp"
						android:layout_height="19dp"
						android:text="@string/johndoe_mail_com_ek1_string"
						 />

					<TextView android:id="@+id/email_ek2"
						android:fontFamily="Arial"
						android:layout_gravity="center_vertical|end"
						android:gravity="end"
						android:textColor="@color/full_name_color"
						android:layout_marginLeft="19dp"
						android:layout_marginTop="0dp"
						android:layout_width="30dp"
						android:layout_height="13dp"
						android:text="@string/email_ek2_string"
						 />

				</RelativeLayout>

			</RelativeLayout>














			<ImageView android:id="@+id/undraw_file_sync_ot38"
				android:src="@drawable/undraw_file_sync_ot38"
				android:contentDescription="undraw_file_sync_ot38"
				 android:layout_marginLeft="-3633dp"
				 android:layout_marginStart="-3633dp"
				android:layout_marginTop="-663dp"
				android:layout_width="271dp"
				android:layout_height="184dp" />

			<ImageView android:id="@+id/undraw_empty_xct9_ek1"
				android:src="@drawable/undraw_empty_xct9_ek1"
				android:contentDescription="undraw_empty_xct9_ek1"
				 android:layout_marginLeft="-3048dp"
				 android:layout_marginStart="-3048dp"
				android:layout_marginTop="-674dp"
				android:layout_width="264dp"
				android:layout_height="200dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>